# RestIO

./: .gitignore  InteractiveProcess.hs  Main.hs  README.md  RestIO.hs  Setup.lhs  restio.cabal
Response/: 404
RestIO/: HistoryBuffer.hs  StrictIO.hs
client/: index.html
client/css/: main.css
